refactor: rename 'Builder Principles' to 'Principles for Building in Crypto' everywhere

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Builder Principles — Jake (2026)",
+  "name": "Principles for Building in Crypto — Jake (2026)",
   "version": "0.1.0",
   "type": "module",
   "private": false,
